Version Next

    - Added new method ThreadLocalContext.invokeWith()
    - Added trace and debug level logging to ThreadLocalContext
    - Fixed bug in AnnotatedXMLEventWriter when namespaces used

Version 1.0.507 Released August 28, 2012

    - Fixed bug in AbstractSimpleContainer when reloading from scratch
    - Fixed missing class in Vaadin add-on (issue #12)
    - Added ProcessRunner

Version 1.0.497 Released August 24, 2012

    - Vaadin7: fixed bug preventing ContextApplication.showError() from working
    - Vaadin7: Call Application.setCurrent() in ContextApplication.invoke()
    - Added PersistentObject.getRootSnapshot(); return new version from setRoot()
    - Reworked PersistentObjectSchemaUpdater to avoid bugs with empty starts
      NOTE: backward-incompatible change.
    - Fixed filtering bug in AbstractSimpleContainer and flaw in SimpleContainer
    - Allow SpringXSLUpdateTransformConfigurer to configure the TransformerFactory
    - Added IdGenerator.checkId() allowing to read but not assign an object's ID
    - Disallow forward references in ParseUtil.serializeReference (as documented)
    - Removed non-Vaadin aspects from aop.xml in the Vaadin add-on JAR (issue #12)
    - Added VaadinExternalListener, changed VaadinApplicationListener to use it
      NOTE: backward-incompatible change.
    - Added @ThreadConfigurable and @ThreadTransactional Spring annotations
    - Added XMLResultSetWriter

Version 1.0.432 Released June 29, 2012

    - SpringContextApplication: add "vaadinContextConfigLocation" init param
    - Fix NotSerializableException in ContextApplication (issue #9)
    - Catch Spring's EmptyResultDataAccessException as well in AbstractDAO
    - Have ContextApplication implement Executor
    - Update vaadin7 package for 7.0.0.alpha3

Version 1.0.420 Released June 9, 2012

    - Added Vaadin 7 versions of Vaadin classes that require change
    - Changed IdGenerator to re-use the same instance on re-entrant invocation;